2014-05-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_parse_length_pair_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_new_region),
	(gst_ttmlrender_show_regions):
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	* src/gstttmlutils.c:
	Start putting some sense into the LengthUnit handling.
	Comments, FIXMEs & whitespace.

2014-05-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_new_region),
	(gst_ttmlrender_show_regions):
	* src/gstttmlutils.c:
	Support for "overflow" attribute.

2014-05-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default),
	(gst_ttml_attribute_add_event):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_new_region),
	(gst_ttmlrender_show_regions):
	* src/gstttmlspan.c: (gst_ttml_span_list_update_attr):
	* src/gstttmlstate.c: (gst_ttml_state_push_attribute),
	(gst_ttml_state_pop_attribute):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	Support for displayAlign attribute.
	Remove helper function obsoleted by new generic enum parsing methods.

2014-05-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_store_layout):
	More gcc pedantry.

2014-05-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	Make gcc happy.

2014-05-06  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_start_ns),
	(gst_ttmlbase_sax_characters):
	* src/gstttmlenums.h:
	* src/gstttmlforward.h:
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):